<resources>
    <string name="app_name">AttendanceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pin">Enter your 4 digits PIN</string>
    <string name="do_you_want_to_clock_out">Do you want to Clock Out?</string>
    <string name="are_you_sure_you_want_to_clock_out">Are you sure you want to clock out?</string>
    <string name="no">No</string>
    <string name="you_have_successfully_clocked_in_have_a_nice_day">You have successfully clocked in. Have a nice day!</string>
    <string name="successfully_clocked_in">Successfully Clocked In</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
</resources>